loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:17: error: not found: value auche
  auche()
  ^