loopfor.LoopCourseForest.scala.code
for( nbTour <- 1 to 7){
  for(etape1 <- 1 to 4){
    avance()
  }
  gauche()
  for(etape2 <- 1 to 2){
    avance()
  }
  droite()
  for(etape3 <- 1 to 4){
    avance()
  droite()
  }
  for(etape4<- 1 to 2){
    avance()
  }
  auche()
  for(etape5 <- 1 to 4){
    avance()
  }
  gauche()
}
